@@ -28,7 +28,7 @@
         },
         {
             "type" : "divider",
-            "size" : 20
+            "size" : 15
         },
         {
             "type": "slider",
@@ -119,6 +119,22 @@
             "ehi_ver" : 185
         },
         {
+            "type": "multiple_choice",
+            "id": "ehi_tracker_vertical_w_anim_choice",
+            "title": "ehi_tracker_vertical_w_anim",
+            "description": "ehi_tracker_vertical_w_anim_desc",
+            "callback": "SetOption",
+            "callback_arguments": "tracker_vertical_w_anim",
+            "items": [
+                "ehi_tracker_vertical_w_anim_1",
+                "ehi_tracker_vertical_w_anim_2"
+            ],
+            "value": "tracker_vertical_w_anim",
+            "parent_func" : "IsVerticalAlignment",
+            "default_value": 1,
+            "ehi_ver" : 232
+        },
+        {
             "type": "button",
             "id": "ehi_visuals_menu",
             "title": "ehi_visuals_menu",
@@ -128,7 +144,7 @@
         },
         {
             "type" : "divider",
-            "size" : 20
+            "size" : 15
         },
         {
             "type": "slider",
@@ -194,7 +210,7 @@
         },
         {
             "type" : "divider",
-            "size" : 20
+            "size" : 15
         },
         {
             "type": "button",
@@ -246,7 +262,7 @@
         },
         {
             "type" : "divider",
-            "size" : 20
+            "size" : 15
         },
         {
             "type" : "label",
